course video form - some minor fixes

--- a/frontend/src/app/core/pages/course-video-form/course-video-form.component.html
+++ b/frontend/src/app/core/pages/course-video-form/course-video-form.component.html
@@ -1,18 +1,6 @@
-<style>
-    h2 {
-        font-size: 22px;
-        font-weight: bold;
-    }
-
-    h3 {
-        font-size: 18px;
-        font-weight: bold;
-    }
-</style>
-
 <div class="container">
 
-    <div [formGroup]="videoFormGroup">
+    <div class="formContainer" [formGroup]="videoFormGroup">
         <h2>Video Details:</h2>
         <div class="formContainer flexContainer">
             <div class="formSubContainer formInputFeild">
