about rout made backend enrolled made

--- a/frontend/src/app/core/pages/course-visit/course-visit.component.html
+++ b/frontend/src/app/core/pages/course-visit/course-visit.component.html
@@ -35,7 +35,7 @@
     </div>
     <button
       class="block select-none rounded-lg bg-blue-600 p-4 font-sans text-sm font-bold uppercase text-white shadow-md shadow-blue-700/10 transition-all hover:shadow-lg hover:shadow-blue-700/20 focus:opacity-[0.85] focus:shadow-none active:opacity-[0.85] active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
-      type="button">
+      type="button" (click)="EnrollCourse()">
       Enroll
     </button>
   </div>
