--- a/frontend/src/app/core/components/progress-card/progress-card.component.html
+++ b/frontend/src/app/core/components/progress-card/progress-card.component.html
@@ -1,19 +1,18 @@
 <div class="courses-container">
     <div class="course">
         <div class="course-preview">
-            <h6>Course</h6>
-            <h2>JavaScript Fundamentals</h2>
+            <h6>{{course.name}}</h6>
             <a href="#">View all chapters <i class="fas fa-chevron-right"></i></a>
         </div>
         <div class="course-info">
             <div class="progress-container">
-                <div class="progress"></div>
+                <div class="progress" [style]="'--progress-width:' + progressPercentage + '%'"></div>
                 <span class="progress-text">
-                    6/9 Challenges
+                    {{progressPercentage}}% completed
                 </span>
             </div>
-            <h6>Chapter 4</h6>
-            <h2>Callbacks & Closures</h2>
+            <h6>{{course.author}}</h6>
+            <h2>{{course.enrolledOn}}</h2>
             <button class="btn">Continue</button>
         </div>
     </div>
