--- a/frontend/src/app/core/components/hero-section/hero-section.component.html
+++ b/frontend/src/app/core/components/hero-section/hero-section.component.html
@@ -1,7 +1,7 @@
 <section class="w-100 h-100 flex flex-col justify-between md:flex-row md:px-12 lg:px-20 p-4 dark:bg-gray-800 transition duration-500 ">
   <div class="text-container md:mt-10 md:w-1/2 pt-20">
    
-    <h1 class="text-2xl md:text-4xl text-black font-bold dark:text-white tracking-normal leading-10"><span class="text-tmk-blue text-red-500">OpenLearn </span>is a Opensource Education PlateForm</h1>
+    <h1 class="text-2xl md:text-4xl text-black font-bold dark:text-white tracking-normal leading-10"><span class="text-tmk-blue text-red-500">OpenLearn </span>is a Opensource Education PlatForm</h1>
 
     <h2 class="text-gray-700 text-lg  font-extralight dark:text-white mt-8">
       Its helps teacher to teach without worring about plateform fee !
