Home Page Corrections

--- a/frontend/src/app/core/components/hero-section/hero-section.component.html
+++ b/frontend/src/app/core/components/hero-section/hero-section.component.html
@@ -4,10 +4,10 @@
     <h1 class="text-2xl md:text-4xl text-black font-bold dark:text-white tracking-normal leading-10"><span class="text-tmk-blue text-red-500">OpenLearn </span>is a Opensource Education PlatForm</h1>
 
     <h2 class="text-gray-700 text-lg  font-extralight dark:text-white mt-8">
-      Its helps teacher to teach without worring about plateform fee !
+      It allows teachers to instruct without being concerned about platform costs!
 
-      <span class="dark:text-red-500 text-blue-500 font-semibold ">One step</span>
-      to make your self productive
+      <span class="dark:text-red-500 text-blue-500 font-semibold ">One action</span>
+      to start being productive
     </h2>
 
     <div class="flex mt-8 md:flex-row items-baseline space-x-4">
