--- a/frontend/src/app/core/components/footer/footer.component.html
+++ b/frontend/src/app/core/components/footer/footer.component.html
@@ -4,7 +4,8 @@
       <div class="xl:grid xl:grid-cols-3 xl:gap-8">
         <div class="space-y-8">
           <img class="h-20" src="/assets/img/logo.png" alt="Company name">
-          <p class="text-sm leading-6 text-gray-600">Spreading Knowladge and love is our first priority</p>
+          <p class="text-sm leading-6 text-gray-600">The <strong>Dissemination of Love</strong> and <strong>Knowledge</strong> is our top objective.
+          </p>
           <div class="flex space-x-6">
             <a routerLink="#" class="text-gray-400 hover:text-gray-500">
               <span class="sr-only">Facebook</span>
@@ -115,7 +116,7 @@
         </div>
       </div>
       <div class="mt-16 border-t border-gray-900/10 pt-8 sm:mt-20 lg:mt-24">
-        <p class="text-xs leading-5 text-gray-500">&copy; 2020 Your Company, Inc. All rights reserved.</p>
+        <p class="text-xs leading-5 text-gray-500">&copy; 2024 Your Company, Inc. All rights reserved.</p>
       </div>
     </div>
   </footer>
