About Us Page Begining

--- a/frontend/src/app/core/pages/about/about.component.html
+++ b/frontend/src/app/core/pages/about/about.component.html
@@ -1,2 +1,12 @@
+<h1 class="text-2xl md:text-4xl text-black font-bold dark:text-white tracking-normal leading-10 mt-24 pl-10">Possibilities can only be Realized via <span class="text-tmk-blue text-red-500">Skills.</span>
+</h1>
+<h2 class="text-gray-700 text-lg  font-extralight dark:text-white mt-8 pl-24 pr-24">
+    You're at the correct spot whether you want to share what you know with the world, teach your teams, or master a new skill. We are here to assist you in realizing your dreams and changing your life as a pioneer in the field of online education.
 
+
+
+
+    <span class="dark:text-red-500 text-blue-500 font-semibold ">One action
+    to start being productive</span>
+  </h2>
 
