removed ul, added accodion instead

--- a/frontend/src/app/core/pages/course-player/course-player.component.html
+++ b/frontend/src/app/core/pages/course-player/course-player.component.html
@@ -12,7 +12,7 @@
         <!-- <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button> -->
         <mat-sidenav class="sidenav" #snav [opened]="true" [mode]="mobileQuery.matches ? 'over' : 'side'"
             [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
-            <mat-nav-list>
+            <!-- <mat-nav-list>
                 <div *ngFor="let course of courses">
                     <button (click)="course.expanded = !course.expanded" class="moduleBtn">
                         {{course.name}}
@@ -30,7 +30,47 @@
                         </ul>
                     }
                 </div>
-            </mat-nav-list>
+            </mat-nav-list> -->
+
+
+            <cdk-accordion class="accordion">
+
+                @for (modules of this.course.modules; track modules; let index = $index) {
+                <cdk-accordion-item #accordionItem="cdkAccordionItem" class="accordion-item" role="button" tabindex="0"
+                    [attr.id]="'accordion-header-' + index" [attr.aria-expanded]="accordionItem.expanded"
+                    [attr.aria-controls]="'accordion-body-' + index">
+
+                    <div class="accordion-item-header" (click)="accordionItem.toggle()">
+                        <span class="heading">{{(index + 1) + ". " + modules.name}}</span>
+                        @if(accordionItem.expanded) {
+                            <span><mat-icon>expand_less</mat-icon></span>
+                        }
+                        @else {
+                            <span><mat-icon>expand_more</mat-icon></span>
+                        }
+                    </div>
+
+                    <div class="accordion-item-body" role="region"
+                        [style.display]="accordionItem.expanded ? '' : 'none'" [attr.id]="'accordion-body-' + index"
+                        [attr.aria-labelledby]="'accordion-header-' + index">
+                    
+                        @for (lecture of modules.lectures; track lecture; let index = $index) {
+                            <ul class="lecture-list">
+                              <li>
+                                <button mat-button (click)="playVideo(lecture.url)">
+                                  {{ lecture.title }}
+                                </button>
+                              </li>
+                            </ul>
+                          }
+
+                    </div>
+
+                </cdk-accordion-item>
+                }
+
+            </cdk-accordion>
+
         </mat-sidenav>
 
         <mat-sidenav-content>
