--- a/frontend/src/app/core/pages/course-player/course-player.component.scss
+++ b/frontend/src/app/core/pages/course-player/course-player.component.scss
@@ -1,3 +1,44 @@
+
+.accordion-item+.accordion-item {
+    border-top: none;
+}
+
+.accordion-item-header {
+    display: flex;
+    align-content: center;
+    justify-content: space-between;
+}
+
+.accordion-item-description {
+    font-size: 0.85em;
+    color: #999;
+}
+
+.accordion-item-header,
+.accordion-item-body {
+    padding: 5px 16px;
+}
+
+.accordion-item-header:hover {
+    cursor: pointer;
+    background-color: #eee;
+}
+
+.accordion-item:first-child {
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+}
+
+.accordion-item:last-child {
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+
+.accordion-container {
+    display: block;
+    margin: 20px;
+}
+
 .example-container {
     display: flex;
     flex-direction: column;
@@ -68,3 +109,4 @@ h1.example-app-name {
     padding: 0;
     list-style-type: none;
 }
+
