About Us Completed

--- a/frontend/src/app/core/pages/about/about.component.html
+++ b/frontend/src/app/core/pages/about/about.component.html
@@ -1,6 +1,6 @@
 <h1 class="text-2xl md:text-4xl text-black font-bold dark:text-white tracking-normal leading-10 mt-24 pl-10">Possibilities can only be Realized via <span class="text-tmk-blue text-red-500">Skills.</span>
 </h1>
-<h2 class="text-gray-700 text-lg  font-extralight dark:text-white mt-8 pl-24 pr-24">
+<h2 class="text-gray-700 text-lg  font-extralight dark:text-white mt-8 pl-32 pr-24">
     You're at the correct spot whether you want to share what you know with the world, teach your teams, or master a new skill. We are here to assist you in realizing your dreams and changing your life as a pioneer in the field of online education.
 
 
@@ -9,4 +9,68 @@
     <span class="dark:text-red-500 text-blue-500 font-semibold ">One action
     to start being productive</span>
   </h2>
+
+
+  <div class="bg-blue-700 mt-20 pb-20">
+    <h1 class="text-white font-bold pt-20">
+        Creating Impact Around the World
+    </h1>
+    <h2 class="text-white font-extralight pt-4 pl-32 pr-24">
+        People and businesses all across the world can adapt to change and prosper thanks to our library, which covers the newest skills and subjects.
+    </h2>
+
+    <!-- <div class="text-white font-bold text-4xl pt-6 grid grid-cols-2 sm:grid-cols-4 md:grid-cols-4 lg:grid-cols-4">
+        <p class="inline-flex items-center justify-center">
+            <span class="ml-20 mr-8">69M</span>
+            <br class="hidden sm:block">
+            <span class="mr-8 sm:mr-0">Learners</span>
+        </p>    
+        <p class="inline-flex items-center justify-center">
+            <span class="mr-8">75K+</span> 
+            <br class="hidden sm:block">
+            <span class="mr-8 sm:mr-0">Instructors</span>
+        </p>    
+        <p class="inline-flex items-center justify-center">
+            <span class="mr-8">210K+</span> 
+            <br class="hidden sm:block">
+            <span class="mr-8 sm:mr-0">Courses</span>
+        </p>    
+        <p class="inline-flex items-center justify-center">
+            <span class="mr-8">940M</span>
+            <br class="hidden sm:block">
+            <span class="mr-8 sm:mr-0">Course Enrollments</span>
+        </p>
+    </div> -->
+    <div class="text-white mt-10 font-bold relative w-full max-w-7xl z-10 mx-auto px-4 sm:px-6 lg:px-8">
+        <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-6">
+            <div class="p_home__metrics__metric">
+                <p class="text-4xl sm:text-5xl lg:text-6xl">69M</p>
+                <p class="text-lg">Learners</p>
+            </div>
+            <div class="p_home__metrics__metric">
+                <p class="text-4xl sm:text-5xl lg:text-6xl">75K+</p>
+                <p class="text-lg">Instructors</p>
+            </div>
+            <div class="p_home__metrics__metric">
+                <p class="text-4xl sm:text-5xl lg:text-6xl">210K+</p>
+                <p class="text-lg">Courses</p>
+            </div>
+            <div class="p_home__metrics__metric">
+                <p class="text-4xl sm:text-5xl lg:text-6xl">940M</p>
+                <p class="text-lg">Course enrollments</p>
+            </div>
+            <div class="p_home__metrics__metric">
+                <p class="text-4xl sm:text-5xl lg:text-6xl">75</p>
+                <p class="text-lg">Languages</p>
+            </div>
+            <div class="p_home__metrics__metric">
+                <p class="text-4xl sm:text-5xl lg:text-6xl">15.7K+</p>
+                <p class="text-lg">Enterprise customers</p>
+            </div>
+        </div>
+    </div>
+    
+    
+      
+</div>
 
