--- a/frontend/src/app/core/components/progress-card/progress-card.component.html
+++ b/frontend/src/app/core/components/progress-card/progress-card.component.html
@@ -2,7 +2,7 @@
     <div class="course">
         <div class="course-preview">
             <h6>{{course.name}}</h6>
-            <a href="#">View all chapters <i class="fas fa-chevron-right"></i></a>
+            <a href="#">View all chapters</a>
         </div>
         <div class="course-info">
             <div class="progress-container">
@@ -11,7 +11,7 @@
                     {{progressPercentage}}% completed
                 </span>
             </div>
-            <h6>{{course.author}}</h6>
+            <a href="#"><h6>{{course.author}}</h6></a>
             <h2>{{course.enrolledOn}}</h2>
             <button class="btn">Continue</button>
         </div>
