--- a/frontend/src/app/core/pages/course-video-form/course-video-form.component.scss
+++ b/frontend/src/app/core/pages/course-video-form/course-video-form.component.scss
@@ -14,6 +14,14 @@ h3 {
     font-weight: bold;
 }
 
+.loader {
+    width: 100%;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 
 /* Firefox */
 input[type=number] {
@@ -22,13 +30,15 @@ input[type=number] {
 
 .container {
     width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
+
     form {
         margin: auto auto;
-        width: 90vw;
+        width: 100%;
         margin: 20px;
+        padding: 20px;
     }
 }
 
@@ -47,7 +57,7 @@ mat-form-feild {
 .formSubContainer {
     display: inline-block;
     vertical-align: top;
-    margin: 10px ;
+    margin: 10px;
     margin-right: 20px;
 }
 
