--- a/frontend/src/app/core/pages/explore/explore.component.html
+++ b/frontend/src/app/core/pages/explore/explore.component.html
@@ -1,5 +1,13 @@
-<main class="p-5 flex flex-wrap gap-5 justify-start  items-center">
-  <ng-container *ngFor="let obj of listOfCourses">
-    <app-course-card [course]="obj"></app-course-card>
-  </ng-container>
+<main class="p-5 flex flex-wrap gap-5 justify-center  items-center">
+  @if(isLoading) {
+    <div class="spinner">
+      <mat-spinner></mat-spinner>
+    </div>
+  }
+  @else {
+    <ng-container *ngFor="let obj of listOfCourses">
+      <app-course-card [course]="obj"></app-course-card>
+    </ng-container>
+  }
+  
 </main>
