Added the logic to -trackProgress and made the -progress page dynamic

--- a/frontend/src/app/core/components/progress-card/progress-card.component.html
+++ b/frontend/src/app/core/components/progress-card/progress-card.component.html
@@ -1,7 +1,7 @@
 <div class="courses-container">
     <div class="course">
         <div class="course-preview">
-            <h6>{{course.name}}</h6>
+            <h6>{{course.title}}</h6>
             <a href="#">View all chapters</a>
         </div>
         <div class="course-info">
@@ -11,8 +11,8 @@
                     {{progressPercentage}}% completed
                 </span>
             </div>
-            <a href="#"><h6>{{course.author}}</h6></a>
-            <h2>{{course.enrolledOn}}</h2>
+            <a href="#" class="author"><h6>{{course.author}}</h6></a>
+            <h2>{{date}}</h2>
             <button class="btn">Continue</button>
         </div>
     </div>
