--- a/frontend/src/app/core/components/progress-card/progress-card.component.scss
+++ b/frontend/src/app/core/components/progress-card/progress-card.component.scss
@@ -31,6 +31,10 @@
     text-transform: uppercase;
 }
 
+.author {
+    margin: 10px;
+}
+
 .course h2 {
     letter-spacing: 1px;
     margin: 10px 0;
