--- a/frontend/src/app/core/components/navbar/navbar.component.html
+++ b/frontend/src/app/core/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="bg-white z-50 sticky top-0 w-full border-gray-200 dark:bg-gray-900">
+<nav class="bg-white z-10 fixed top-0 w-full border-gray-200 dark:bg-gray-900">
   <div class=" flex flex-wrap items-center justify-between mx-auto p-4">
     <a routerLink="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
       <img [src]="logoImage" class="h-8" alt="OpenLean" />
