--- a/frontend/src/app/core/pages/course-visit/course-visit.component.html
+++ b/frontend/src/app/core/pages/course-visit/course-visit.component.html
@@ -11,7 +11,7 @@
                 class="inline-block py-1 px-2 rounded-full bg-green-600 text-white  text-xs font-bold tracking-widest mb-2">Featured
                 Courses</span>
               <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-100">{{courseData?.title}}</h1>
-              <p class="text-indigo-200 hidden-scroll h-40 overflow-auto text-base pb-6">{{courseData?.description}}</p>
+              <p class="text-indigo-200 hidden-scroll h-40 overflow-auto text-base pb-6 text-justify">{{courseData?.description}}</p>
               <div class="flex items-center justify-between">
                 <div class="flex items-center pb-12 ">
                   <div class="h-12 w-12">
