--- a/frontend/src/app/core/components/course-card/course-card.component.html
+++ b/frontend/src/app/core/components/course-card/course-card.component.html
@@ -1,4 +1,4 @@
-<div class="flex  flex-col max-w-[26rem] rounded-xl bg-white shadow-lg overflow-hidden">
+<div class="flex  flex-col max-w-[26rem] rounded-xl bg-white shadow-lg overflow-hidden mt-[95px]">
     <div class="relative h-40">
         <img class="w-full h-full object-cover " [src]="course?.thumbnail?.base64" alt="Course Thumbnail">
         <div class="absolute inset-0 bg-gradient-to-tr from-transparent via-transparent to-black/60"></div>
