--- a/frontend/src/app/core/components/navbar/navbar.component.html
+++ b/frontend/src/app/core/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
-<nav class="bg-white z-10 fixed top-0 w-full border-gray-200 dark:bg-gray-900">
-  <div class=" flex flex-wrap items-center justify-between mx-auto p-4">
+<nav class="bg-white z-10 fixed top-0 w-full dark:bg-gray-900">
+  <div class=" flex flex-wrap items-center justify-between mx-auto p-4 border-solid border-black">
     <a routerLink="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
       <img [src]="logoImage" class="h-8" alt="OpenLean" />
       <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">OpenLearn</span>
